router/server/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-deployment
  namespace: router
spec:
  replicas: 3
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
      - name: router
        image:  iuseneovimbtw/router:only-route
        ports:
        - containerPort: 8080
