router/server/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-service
  namespace: router
spec:
  type: LoadBalancer
  selector:
    app: router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
