router/server/kube/ingress.yaml
# use in prod - needs testing, i wasnt successful in making it work

apiVersion: v1
kind: Service
metadata:
  name: router-service
  namespace: router
spec:
  selector:
    app: router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress
  namespace: router
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-service
            port:
              number: 80
