router/server/kube/router-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-deployment
  namespace: router
spec:
  replicas: 3
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
      - name: router
        image: iuseneovimbtw/r-try:latest 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: router-service
  namespace: router
spec:
  selector:
    app: router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress
  namespace: router
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-service
            port:
              number: 80
